--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
 
-        <div class="page-header text center"w>
+        <div class="page-header text center">
             <h2>User Registration System</h2>
         </div>
 
